# Blinc

./: .gitignore  AGENTS.md  CSS_ANIMATION_ROADMAP.md  Cargo.toml  PROJECT_PLAN.md  README.md  ROADMAP.md  blinc.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: android.yml  ci.yml  coverage.yml  ios-compile.yml  msrv.yml
crates/blinc_animation/: Cargo.toml  README.md
crates/blinc_animation/src/: easing.rs  keyframe.rs  lib.rs  presets.rs  scheduler.rs  spring.rs  timeline.rs  values.rs
crates/blinc_app/: CHANGELOG.md  Cargo.toml  README.md
crates/blinc_app/examples/: canvas_demo.rs  carousel_demo.rs  charts_gallery_demo.rs  charts_line_demo.rs  charts_linked_brush_demo.rs  charts_multiline_demo.rs  cn_demo.rs  code_demo.rs  code_test.rs  css_parser_demo.rs  emoji_demo.rs  i18n_demo.rs  image_layer_test.rs  keyframe_canvas.rs  markdown_demo.rs  motion_demo.rs  music_player.rs  notch_demo.rs  (+10 more)
crates/blinc_cli/: Cargo.toml  README.md
crates/blinc_cli/src/: config.rs  doctor.rs  main.rs  project.rs
crates/blinc_cn/: Cargo.toml  README.md
crates/blinc_cn/src/: lib.rs
crates/blinc_cn/src/components/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  field.rs  form.rs  hover_card.rs  input.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio.rs  resizable.rs  responsive.rs  scroll_area.rs  select.rs  shared.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  (+5 more)
crates/blinc_core/: Cargo.toml  README.md
crates/blinc_debugger/: COMPONENTS_NEEDED.md  Cargo.toml  README.md
crates/blinc_embed/: Cargo.toml
crates/blinc_embed/src/: lib.rs
crates/blinc_gpu/: CHANGELOG.md  Cargo.toml  README.md
crates/blinc_gpu/src/: backbuffer.rs  image.rs  lib.rs  paint.rs  particles.rs  path.rs  primitives.rs  renderer.rs  shaders.rs  text.rs
crates/blinc_gpu/src/shaders/: image.wgsl
crates/blinc_i18n/: Cargo.toml
crates/blinc_i18n/src/: error.rs  fluent.rs  label.rs  lib.rs  locale.rs  simple.rs  state.rs
crates/blinc_icons/: README.md  build.rs
crates/blinc_image/: Cargo.toml  README.md
crates/blinc_image/src/: lib.rs  loader.rs  source.rs
crates/blinc_layout/: CHANGELOG.md  Cargo.toml  README.md
crates/blinc_layout/src/: animated.rs  canvas.rs  css_parser.rs  diff.rs  div.rs  element.rs  element_style.rs  event_handler.rs  event_router.rs  image.rs  interactive.rs  key.rs  layout_animation.rs  lib.rs  motion.rs  notch.rs  overlay_state.rs  recorder_bridge.rs  render_state.rs  renderer.rs  scroll.rs  stack.rs  stateful.rs  style.rs  styled_text.rs  svg.rs  syntax.rs  text.rs  text_measure.rs  text_selection.rs  tree.rs  typography.rs  visual_animation.rs
crates/blinc_layout/src/markdown/: config.rs  renderer.rs
crates/blinc_layout/src/rich_text/: mod.rs  parser.rs
crates/blinc_layout/src/selector/: handle.rs  mod.rs  registry.rs  scroll_ref.rs
crates/blinc_layout/src/widgets/: blockquote.rs  button.rs  checkbox.rs  code.rs  cursor.rs  hr.rs  link.rs  list.rs  mod.rs  overlay.rs  radio.rs  scroll.rs  table.rs  text_area.rs  text_input.rs
crates/blinc_macros/: Cargo.toml  README.md
crates/blinc_paint/: Cargo.toml  README.md
crates/blinc_paint/src/: color.rs  context.rs  gradient.rs  lib.rs  path.rs  primitives.rs
crates/blinc_platform/: Cargo.toml  README.md
crates/blinc_platform/src/: error.rs  input.rs  lib.rs  webview.rs
crates/blinc_recorder/: Cargo.toml  README.md
crates/blinc_runtime/: README.md
crates/blinc_svg/: README.md
crates/blinc_test_suite/: README.md
crates/blinc_text/: Cargo.toml  README.md
crates/blinc_theme/: Cargo.toml  README.md
crates/blinc_theme/src/: lib.rs  state.rs
crates/blinc_theme/src/presets/: mod.rs
crates/blinc_theme/src/themes/: blinc.rs
crates/blinc_theme/src/themes/platform/: linux.rs  macos.rs  windows.rs
crates/blinc_theme/src/tokens/: color.rs  mod.rs  opacity.rs  shadow.rs
crates/blinc_theme/tests/: presets.rs
crates/blinc_widgets/: Cargo.toml
crates/blinc_widgets/src/: button.rs  checkbox.rs  container.rs  context.rs  lib.rs  text.rs  text_area.rs  text_input.rs  widget.rs
docs/: PUBLISH.md  design-tokens.md  headless-diagnostics.md  inner-shadow-plan.md
docs/book/: book.toml
docs/plans/: 2026-02-09-blinc-charts-design.md  2026-02-11-blinc-charts-gallery-completion.md  2026-02-11-d3-blinccharts-gap-backlog.md  2026-02-13-blinc-webview-embed-packaging-baseline.md  2026-02-13-blinc-webview-embed-release-runbook.md  2026-02-14-app-headless-diagnostics.md  2026-02-14-blinc-cn-form-field-implementation.md  blinc-cn-components.md  layout-animation-investigation.md  layout-animation-system.md  mobile-sdk-proposal.md  overlay-architecture-redesign.md
docs/references/: 2026-02-09-chart-candidates.md  2026-02-11-d3-blinccharts-capability-matrix.md  gpui-d3rs.md
examples/counter/: main.blinc
extensions/blinc_platform_android/: Cargo.toml  README.md
extensions/blinc_platform_desktop/: Cargo.toml  README.md
extensions/blinc_platform_fuchsia/: Cargo.toml
extensions/blinc_platform_harmony/: Cargo.toml  README.md
extensions/blinc_platform_harmony/src/: app.rs  assets.rs  event_loop.rs  input.rs  lib.rs  napi_bridge.rs  window.rs
extensions/blinc_platform_ios/: Cargo.toml  README.md
grammars/: blinc.zyn
mobile/example/: .env.example  Cargo.toml  build-android.sh  build-ohos.sh
resource/: spec.md
resource/i18n/: blinc-i18n.schema.json  demo.en-US.ftl  demo.en-US.yaml  demo.ko-KR.ftl  demo.ko-KR.yaml
scripts/: android-env.sh  e2e_macos_charts_gallery.sh  e2e_macos_windowed_example.sh  package-smoke.sh  publish-crates.sh  setup-fuchsia-sdk.sh  setup-harmony-sdk.sh  update-crate-metadata.sh  verify-fuchsia-tools.sh  verify-harmony-tools.sh
toolchain/targets/: android.toml  ios.toml  linux.toml  macos.toml  wasm.toml  windows.toml
toolchain/templates/rust/: Cargo.toml  README.md  blinc.toml
toolchain/templates/rust/src/: main.rs
(+121 files in other folders)
