[package]
name = "blinc_cn"
description = "Blinc Component Library - shadcn-style themed components built on blinc_layout primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_cn"
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
# Primitives layer
blinc_layout = { path = "../blinc_layout", version = "0.1.12" }
blinc_core = { path = "../blinc_core", version = "0.1.12" }
blinc_animation = { path = "../blinc_animation", version = "0.1.12" }
blinc_theme = { path = "../blinc_theme", version = "0.1.12" }
blinc_i18n = { path = "../blinc_i18n", version = "0.1.12" }
blinc_macros = { path = "../blinc_macros", version = "0.1.12" }
blinc_icons = { path = "../blinc_icons", version = "0.1.12" }

# Layout
taffy.workspace = true

# Logging
tracing.workspace = true
