[package]
name = "blinc_gpu"
description = "Blinc GPU renderer - SDF-based rendering via wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
# No default backends - must be explicitly selected per platform
default = []
vulkan = ["wgpu/vulkan-portability"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgl = ["wgpu/webgl"]
# Platform-specific presets
desktop = ["vulkan", "metal", "dx12"]  # All desktop backends
android = ["vulkan"]                    # Android only uses Vulkan
ios = ["metal"]                         # iOS only uses Metal

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_layout = { path = "../blinc_layout" }
blinc_paint = { path = "../blinc_paint" }
blinc_text = { path = "../blinc_text" }

# GPU
wgpu.workspace = true
naga.workspace = true
bytemuck.workspace = true

# Windowing
winit.workspace = true
raw-window-handle.workspace = true

# Data structures
slotmap.workspace = true
smallvec.workspace = true
lru.workspace = true

# Logging
tracing.workspace = true

# Async
pollster.workspace = true

# Path tessellation
lyon.workspace = true
