[package]
name = "blinc_gpu"
description = "Blinc GPU renderer - SDF-based rendering via wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_gpu"
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
# No default backends - must be explicitly selected per platform
default = []
vulkan = ["wgpu/vulkan-portability"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgl = ["wgpu/webgl"]
# Platform-specific presets
desktop = ["vulkan", "metal", "dx12"]  # All desktop backends
android = ["vulkan"]                    # Android only uses Vulkan
ios = ["metal"]                         # iOS only uses Metal
fuchsia = ["vulkan"]                    # Fuchsia uses Vulkan via Scenic
harmony = ["vulkan"]                    # HarmonyOS prefers Vulkan

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.1.1" }
blinc_layout = { path = "../blinc_layout", version = "0.1.1" }
blinc_paint = { path = "../blinc_paint", version = "0.1.1" }
blinc_text = { path = "../blinc_text", version = "0.1.1" }

# GPU
wgpu.workspace = true
naga.workspace = true
bytemuck.workspace = true

# Windowing
winit.workspace = true
raw-window-handle.workspace = true

# Data structures
slotmap.workspace = true
smallvec.workspace = true
lru.workspace = true

# Logging
tracing.workspace = true

# Async
pollster.workspace = true

# Path tessellation
lyon.workspace = true
