[package]
name = "blinc_layout"
description = "Blinc layout engine - Flexbox layout powered by Taffy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_animation = { path = "../blinc_animation" }

# Layout
taffy.workspace = true

# Data structures
slotmap.workspace = true
indexmap.workspace = true

# Logging
tracing.workspace = true

# Regex for syntax highlighting
regex.workspace = true
