[package]
name = "blinc_layout"
description = "Blinc layout engine - Flexbox layout powered by Taffy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/blinc_layout"
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
# Enable recorder integration for debugging/testing. Disable for production builds.
recorder = []

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.1.12" }
blinc_animation = { path = "../blinc_animation", version = "0.1.12" }
blinc_theme = { path = "../blinc_theme", version = "0.1.12" }
blinc_i18n = { path = "../blinc_i18n", version = "0.1.12" }

# Layout
taffy.workspace = true

# Data structures
slotmap.workspace = true
indexmap.workspace = true

# Logging
tracing.workspace = true

# Regex for syntax highlighting
regex.workspace = true

# Markdown parsing
pulldown-cmark = "0.10"

# HTML entity decoding
html-escape = "0.2"

# CSS parser combinators
nom = "7"

# URL opening (for links) - desktop only
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
open = "5"
