[package]
name = "blinc_widgets"
description = "Blinc widget library - core UI components with FSM-driven interactions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
blinc_core = { path = "../blinc_core" }
blinc_animation = { path = "../blinc_animation" }
blinc_layout = { path = "../blinc_layout" }
blinc_paint = { path = "../blinc_paint" }

# Data structures
slotmap.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true

# Logging
tracing.workspace = true
